--- a/dhc-app-api/src/main/resources/application-local.yml
+++ b/dhc-app-api/src/main/resources/application-local.yml
@@ -4,5 +4,6 @@ spring:
   datasource:
     driver-class-name: "com.mysql.cj.jdbc.Driver"
     url: "jdbc:mysql://47.94.142.208:3307/d_example2?useLegacyDatetimeCode=false&serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull"
+#    url: "jdbc:mysql://localhost:3306"
     username: "root"
     password: "123456"
