--- a/dhc-app-api/src/main/resources/application-dev.yml
+++ b/dhc-app-api/src/main/resources/application-dev.yml
@@ -1,9 +1,10 @@
 spring:
-  profiles:
-    active: dev
   datasource:
-    #  mysql驱动，根据使用的数据库版本确定
     driver-class-name: "com.mysql.cj.jdbc.Driver"
     url: "jdbc:mysql://47.94.142.208:3307/d_example2?useLegacyDatetimeCode=false&serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull"
     username: "root"
     password: "123456"
+  jpa:
+    show-sql: true
+    hibernate:
+      ddl-auto: create
