--- a/dhc-app-api/src/main/resources/application.yml
+++ b/dhc-app-api/src/main/resources/application.yml
@@ -3,7 +3,7 @@ server:
 
 spring:
     profiles:
-        active: local
+        active: '@profiles.active@'
     application:
         name: dhc-app
     mvc:
