--- a/pom.xml
+++ b/pom.xml
@@ -13,27 +13,27 @@
     <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
-    <profiles>
-        <profile>
-            <id>local</id>
-            <properties>
-                <profileActive>local</profileActive>
-            </properties>
-            <activation>
-                <!--默认选项-->
-                <activeByDefault>true</activeByDefault>
-            </activation>
-        </profile>
-        <profile>
-            <id>dev</id>
-            <properties>
-                <profileActive>dev</profileActive>
-            </properties>
-            <activation>
-                <activeByDefault>false</activeByDefault>
-            </activation>
-        </profile>
-    </profiles>
+<!--    <profiles>-->
+<!--        <profile>-->
+<!--            <id>local</id>-->
+<!--            <properties>-->
+<!--                <profileActive>local</profileActive>-->
+<!--            </properties>-->
+<!--            <activation>-->
+<!--                &lt;!&ndash;默认选项&ndash;&gt;-->
+<!--                <activeByDefault>true</activeByDefault>-->
+<!--            </activation>-->
+<!--        </profile>-->
+<!--        <profile>-->
+<!--            <id>dev</id>-->
+<!--            <properties>-->
+<!--                <profileActive>dev</profileActive>-->
+<!--            </properties>-->
+<!--            <activation>-->
+<!--                <activeByDefault>false</activeByDefault>-->
+<!--            </activation>-->
+<!--        </profile>-->
+<!--    </profiles>-->
 
     <properties>
         <java.version>17</java.version>
