--- a/dhc-app-api/pom.xml
+++ b/dhc-app-api/pom.xml
@@ -67,8 +67,8 @@
 
         <!--连接mysql数据库-->
         <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
+            <groupId>com.mysql</groupId>
+            <artifactId>mysql-connector-j</artifactId>
         </dependency>
 
         <!--持久化数据-->
@@ -84,10 +84,10 @@
         </dependency>
 
         <!--请求接口登陆验证用的-->
-<!--        <dependency>-->
-<!--            <groupId>org.springframework.boot</groupId>-->
-<!--            <artifactId>spring-boot-starter-security</artifactId>-->
-<!--        </dependency>-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>org.projectlombok</groupId>
@@ -95,6 +95,7 @@
             <version>1.18.24</version>
         </dependency>
 
+<!--        参数校验用的-->
         <dependency>
             <groupId>javax.validation</groupId>
             <artifactId>validation-api</artifactId>
@@ -107,6 +108,17 @@
             <optional>true</optional>
         </dependency>
 
+        <!-- springboot3中代替swagger3 -->
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-starter-webmvc-api</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
@@ -115,7 +127,7 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
 <!--                 加上版本号上面2行groupId和artifactId才不报错，不加也没关系，报错不影响-->
-                <version>2.7.2</version>
+<!--                <version>2.7.2</version>-->
             </plugin>
         </plugins>
 
