--- a/dhc-app-api/src/main/resources/application-local.yml
+++ b/dhc-app-api/src/main/resources/application-local.yml
@@ -5,6 +5,9 @@ spring:
     url: "jdbc:mysql://localhost:3306/dhc?useLegacyDatetimeCode=false&serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull"
     username: "root"
     password: "hongchen"
+#    url: "jdbc:mysql://47.94.142.208:3307/d_example2?useLegacyDatetimeCode=false&serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull"
+#    username: "root"
+#    password: "123456"
   jpa:
     show-sql: true
     hibernate:
