--- a/dhc-app-api/src/main/resources/application-local.yml
+++ b/dhc-app-api/src/main/resources/application-local.yml
@@ -2,12 +2,29 @@ spring:
   datasource:
     #  mysql驱动，根据使用的数据库版本确定
     driver-class-name: "com.mysql.cj.jdbc.Driver"
-    url: "jdbc:mysql://localhost:3306/dhc?useLegacyDatetimeCode=false&serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull"
+#    url: "jdbc:mysql://localhost:3306/dhc?useLegacyDatetimeCode=false&serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull"
+    url: "jdbc:mysql://82.157.137.78:3306/dhc?useLegacyDatetimeCode=false&serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull"
     username: "root"
     password: "hongchen"
 #    url: "jdbc:mysql://47.94.142.208:3307/d_example2?useLegacyDatetimeCode=false&serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull"
 #    username: "root"
 #    password: "123456"
+
+  data:
+    redis:
+#      host: 127.0.0.127
+      host: 82.157.137.78
+      port: 6379
+      timeout: 5000
+      password: hongchen
+      database: 0
+      jedis:
+        pool:
+          max-idle: 8
+          min-idle: 0
+          max-active: 50
+          max-wait: -1
+
   jpa:
     show-sql: true
     hibernate:
