--- a/dhc-app-api/src/main/resources/application.yml
+++ b/dhc-app-api/src/main/resources/application.yml
@@ -9,8 +9,8 @@ spring:
 #    mvc:
 #        pathmatch:
 #            matching-strategy: ant_path_matcher
-    security:
-        user:
-            name: user
-            roles: admin
-            password: 123456
+#    security:
+#        user:
+#            name: user
+#            roles: admin
+#            password: 123456
